--- a/Public/index.html
+++ b/Public/index.html
@@ -123,14 +123,14 @@
     </header>
 
     <section id="home">
-        <h2>Welcome to Swapna Solutions</h2>
+        <h2>Welcome to Jyothi Solutions</h2>
         <p>Empowering businesses with cutting-edge technologies in AWS, DevOps, Development, Testing, and Database solutions.</p>
         <a href="#about" class="button">Learn More</a>
     </section>
 
     <section id="about">
         <h2>About Us</h2>
-        <p>Swapna Solutions Pvt Ltd is dedicated to delivering high-quality IT services and innovative solutions that drive success for our clients.</p>
+        <p>Jyothi Solutions Pvt Ltd is dedicated to delivering high-quality IT services and innovative solutions that drive success for our clients.</p>
         <a href="#services" class="button">Our Services</a>
     </section>
 
