--- a/Public/index.html
+++ b/Public/index.html
@@ -119,7 +119,7 @@
 </head>
 <body>
     <header>
-        <h1>Swapna Solutions</h1>
+        <h1>Jyothi Solutions</h1>
     </header>
 
     <section id="home">
@@ -147,7 +147,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 Swapna Solutions Pvt Ltd. All Rights Reserved.</p>
+        <p>&copy; 2024 Jyothi Solutions Pvt Ltd. All Rights Reserved.</p>
     </footer>
 </body>
 </html>
